Add HTML format with ical.js conversion

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: "Waste, Recycling, Glass and Garden bin schedules"
 <h2>Finding your collection schedule</h2>
 
 <p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district which will provide the collection weekday and specific schedule name.</p>
-<p>The calendars provided are hosted within a GitHub repository and published through GitHub pages. The "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the public URL to the .ics file for subscribing through calendar software or for using as an endpoint in other software that supports the iCalendar format.</p>
+<p>Each calendar is provided in HTML, iCalendar and JSON format. All data is derived from the iCalendar data and published through GitHub pages.
+<p>The "Download iCal" button provides the .ics file of the iCalendar for local use. The "copy to clipboard" button will provide the public URL to the .ics file for subscribing through calendar software or for using as an endpoint in other software that supports the iCalendar format.</p>
 
 {% include collection-schedules.html %}
