Add collection note to garden collection schedules

--- a/collections/garden/index.html
+++ b/collections/garden/index.html
@@ -5,6 +5,8 @@ layout: default
 
 <h2 class="mb-3">Garden Waste Collection schedules</h2>
 
+<p>The garden waste collection service runs every year from the start of April to the end of March the following year (there are no collections in January and February).</p>
+
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for collections in site.data.calendars.bin_collections %}
         {% if collections.name == 'Garden Waste Collections' %}
