Set breadcrumb value in matter for listing pages

--- a/collections/garden/index.html
+++ b/collections/garden/index.html
@@ -1,9 +1,10 @@
 ---
-title: Refuse collection schedules
+title: Garden Waste Collection schedules
+breadcrumb: Garden
 layout: default
 ---
 
-<h2 class="mb-3">Garden Waste Collection schedules</h2>
+<h2 class="mb-3">{{ page.title }}</h2>
 
 <p>The garden waste collection service runs every year from the start of April to the end of March the following year (there are no collections in January and February).</p>
 
