--- a/collections/refuse/index.html
+++ b/collections/refuse/index.html
@@ -1,9 +1,10 @@
 ---
-title: Refuse collection schedules
+title: Refuse/Recycling collection schedules
+breadcrumb: Refuse
 layout: default
 ---
 
-<h2 class="mb-3">Refuse collection schedules</h2>
+<h2 class="mb-3">{{ page.title }}</h2>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for collections in site.data.calendars.bin_collections %}
