Set description for SEO

--- a/collections/garden/friday-e.html
+++ b/collections/garden/friday-e.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Friday E"
+description: Garden Waste Collection Friday E collection calendar
 layout: default
 ---
 
