--- a/collections/garden/index.html
+++ b/collections/garden/index.html
@@ -1,5 +1,6 @@
 ---
 title: Garden Waste Collection schedules
+description: All Garden Waste Collection schedules labelled A - J.
 breadcrumb: Garden
 layout: default
 ---
