--- a/collections/garden/monday-a.html
+++ b/collections/garden/monday-a.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Monday A"
+description: Garden Waste Collection Monday A collection calendar
 layout: default
 ---
 
