--- a/collections/garden/monday-f.html
+++ b/collections/garden/monday-f.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Monday F"
+description: Garden Waste Collection Monday F collection calendar
 layout: default
 ---
 
