--- a/collections/garden/thursday-d.html
+++ b/collections/garden/thursday-d.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Thursday D"
+description: Garden Waste Collection Thursday D collection calendar
 layout: default
 ---
 
