--- a/collections/garden/thursday-i.html
+++ b/collections/garden/thursday-i.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Thursday E"
+description: Garden Waste Collection Thursday E collection calendar
 layout: default
 ---
 
