--- a/collections/garden/tuesday-b.html
+++ b/collections/garden/tuesday-b.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Tuesday B"
+description: Garden Waste Collection Tuesday B collection calendar
 layout: default
 ---
 
