--- a/collections/garden/tuesday-g.html
+++ b/collections/garden/tuesday-g.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Tuesday G"
+description: Garden Waste Collection Tuesday G collection calendar
 layout: default
 ---
 
