--- a/collections/garden/wednesday-c.html
+++ b/collections/garden/wednesday-c.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Wednesday C"
+description: Garden Waste Collection Wednesday C collection calendar
 layout: default
 ---
 
