--- a/collections/garden/wednesday-h.html
+++ b/collections/garden/wednesday-h.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Wednesday H"
+description: Garden Waste Collection Wednesday H collection calendar
 layout: default
 ---
 
