--- a/collections/index.html
+++ b/collections/index.html
@@ -1,12 +1,13 @@
 ---
-title: Bin Collection Calendars
+title: All Bin Collection Calendars
+description: Find all the Gedling bin collection calendars for refuse and garden waste.
 breadcrumb: Collections
 layout: default
 ---
 
 <h2>{{ page.title }}</h2>
 
-<p>Find all links to HTML calendars for refuse/garden bin collections.</p>
+<p>Find all links to the HTML calendars for refuse/garden bin collections.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 g-4">
     {% for type in site.data.calendars.bin_collections %}
