--- a/collections/refuse/friday-g1.html
+++ b/collections/refuse/friday-g1.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Friday G1"
+description: General waste/recycling bin collection Friday G1 calendar
 layout: default
 ---
 
