--- a/collections/refuse/friday-g3.html
+++ b/collections/refuse/friday-g3.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Friday G3"
+description: General waste/recycling bin collection Friday G3 calendar
 layout: default
 ---
 
