--- a/collections/refuse/friday-g4.html
+++ b/collections/refuse/friday-g4.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Friday G4"
+description: General waste/recycling bin collection Friday G4 calendar
 layout: default
 ---
 
