--- a/collections/refuse/index.html
+++ b/collections/refuse/index.html
@@ -1,5 +1,6 @@
 ---
 title: Refuse/Recycling collection schedules
+description: All refuse/recycling bin collection schedules labelled as G1 - G4.
 breadcrumb: Refuse
 layout: default
 ---
