--- a/collections/refuse/monday-g1.html
+++ b/collections/refuse/monday-g1.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Monday G1"
+description: General waste/recycling bin collection Monday G1 calendar.
 layout: default
 ---
 
