--- a/collections/refuse/monday-g3.html
+++ b/collections/refuse/monday-g3.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Monday G3"
+description: General waste/recycling bin collection Monday G3 calendar.
 layout: default
 ---
 
