--- a/collections/refuse/monday-g4.html
+++ b/collections/refuse/monday-g4.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Monday G4"
+description: General waste/recycling bin collection Monday G4 calendar.
 layout: default
 ---
 
