--- a/collections/refuse/thursday-g1.html
+++ b/collections/refuse/thursday-g1.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Thursday G1"
+description: General waste/recycling bin collection Thursday G1 calendar.
 layout: default
 ---
 
