--- a/collections/refuse/thursday-g2.html
+++ b/collections/refuse/thursday-g2.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Thursday G2"
+description: General waste/recycling bin collection Thursday G2 calendar.
 layout: default
 ---
 
