--- a/collections/refuse/thursday-g4.html
+++ b/collections/refuse/thursday-g4.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Thursday G4"
+description: General waste/recycling bin collection Thursday G4 calendar.
 layout: default
 ---
 
