--- a/collections/refuse/tuesday-g1.html
+++ b/collections/refuse/tuesday-g1.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Tuesday G1"
+description: General waste/recycling bin collection Tuesday G1 calendar.
 layout: default
 ---
 
