--- a/collections/refuse/tuesday-g2.html
+++ b/collections/refuse/tuesday-g2.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Tuesday G2"
+description: General waste/recycling bin collection Tuesday G2 calendar.
 layout: default
 ---
 
