--- a/collections/refuse/tuesday-g4.html
+++ b/collections/refuse/tuesday-g4.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Tuesday G4"
+description: General waste/recycling bin collection Tuesday G4 calendar.
 layout: default
 ---
 
