--- a/collections/refuse/wednesday-g1.html
+++ b/collections/refuse/wednesday-g1.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Wednesday G1"
+description: General waste/recycling bin collection Wednesday G1 calendar.
 layout: default
 ---
 
