--- a/collections/refuse/wednesday-g2.html
+++ b/collections/refuse/wednesday-g2.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Wednesday G2"
+description: General waste/recycling bin collection Wednesday G2 calendar.
 layout: default
 ---
 
