--- a/collections/refuse/wednesday-g3.html
+++ b/collections/refuse/wednesday-g3.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Wednesday G3"
+description: General waste/recycling bin collection Wednesday G3 calendar.
 layout: default
 ---
 
