--- a/collections/garden/friday-j.html
+++ b/collections/garden/friday-j.html
@@ -1,5 +1,6 @@
 ---
 title: "Garden Waste Collection: Friday J"
+description: Garden Waste Collection Friday J collection calendar
 layout: default
 ---
 
