--- a/collections/refuse/friday-g2.html
+++ b/collections/refuse/friday-g2.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Friday G2"
+description: General waste/recycling bin collection Friday G2 calendar
 layout: default
 ---
 
