--- a/collections/refuse/monday-g2.html
+++ b/collections/refuse/monday-g2.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Monday G2"
+description: General waste/recycling bin collection Monday G2 calendar.
 layout: default
 ---
 
