--- a/collections/refuse/thursday-g3.html
+++ b/collections/refuse/thursday-g3.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Thursday G3"
+description: General waste/recycling bin collection Thursday G3 calendar.
 layout: default
 ---
 
