--- a/collections/refuse/tuesday-g3.html
+++ b/collections/refuse/tuesday-g3.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Tuesday G3"
+description: General waste/recycling bin collection Tuesday G3 calendar.
 layout: default
 ---
 
