--- a/collections/refuse/wednesday-g4.html
+++ b/collections/refuse/wednesday-g4.html
@@ -1,5 +1,6 @@
 ---
 title: "Refuse/Recycling Collection: Wednesday G4"
+description: General waste/recycling bin collection Wednesday G4 calendar.
 layout: default
 ---
 
