Front end bin collection search using Cloudflare worker

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: "Waste, Recycling, Glass and Garden bin schedules"
 
 <h2>Finding your collection schedule</h2>
 
-<p>Gedling Borough Council provides a <a href="https://apps.gedling.gov.uk/refuse/search.aspx">Refuse Collection Days search tool</a>, allowing you to input a street name within the Gedling district which will provide the collection weekday and specific schedule name.</p>
-<p>Each calendar published below is provided in HTML, iCalendar (iCal) and JSON formats. All data is derived from the <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/tree/main/ical">iCalendar data</a>.</p>
+{% include find-collection-schedule.html %}
+
+<p class="mt-2">You can also view all calendars below. Each calendar published is provided in HTML, iCalendar (iCal) and JSON formats. All data is derived from the <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/tree/main/ical">iCalendar data</a>.</p>
 
 {% include collection-schedules.html %}
