Adjust search results layout and add search collection page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: "Waste, Recycling, Glass and Garden bin schedules"
 
 <h2>Finding your collection schedule</h2>
 
+<p>Gedling Borough Council provides a <a href="{{ site.gedlingRefuseSearchUrl }}" target="_blank">Refuse Collection Days search tool</a>, using the search bar below, you can enter any valid street name in the Gedling area and the correct schedules for both refuse/recycling and garden waste collection will be provided for you.</p>
+
 {% include find-collection-schedule.html %}
 
 <p class="mt-2">You can also view all calendars below. Each calendar published is provided in HTML, iCalendar (iCal) and JSON formats. All data is derived from the <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/tree/main/ical">iCalendar data</a>.</p>
