Tweak search formatting

--- a/collection-search.html
+++ b/collection-search.html
@@ -7,7 +7,7 @@ layout: default
 
 <p>Gedling Borough Council provides 20 different refuse/waste collections and 10 garden waste collections. Depending on the area within the Gedling district, a specific weekday and schedule name is assigned. Using this search tool, you can find the specific collection information for bin collections.</p>
 
-<p class="fw-bold text-danger">You must enter a street name that is within the Gedling local authority. No additional informaiton such as property numbers or postcode should be entered.</p>
+<p class="fw-bold text-danger">You must enter a street name that is within the Gedling local authority. No additional information such as property numbers or postcode should be entered.</p>
 
 {% include find-collection-schedule.html %}
 
@@ -15,4 +15,4 @@ layout: default
 
 <h2 class="h3">About the search data</h2>
 
-<p>This search tool uses data from the <a href="{{ site.gedlingRefuseSearchUrl }}">Gedling Borough Council refuse collection days search</a>. The search result format provided by apps.gedling.gov.uk does not directly provide the collection weekday or schedule name but this search tool scrapes the data and formats the information in a more readable format.</p>
+<p>This search tool uses data from the <a href="{{ site.gedlingRefuseSearchUrl }}">Gedling Borough Council refuse collection days search</a>. The search result format provided by apps.gedling.gov.uk does not directly provide the collection weekday or schedule name but this search tool scrapes the data and formats the information in a more readable format that's easier to understand and links directly to the correct calendar information.</p>
