Make URLs consistent at build time

--- a/collection-search.html
+++ b/collection-search.html
@@ -1,11 +1,12 @@
 ---
 title: Refuse Collection Days Search
+description: "Find your refuse/recycling or garden waste collection calendar with this search tool."
 layout: default
 ---
 
 <h1 class="h2">{{ page.title }}</h1>
 
-<p>Gedling Borough Council provides 20 different refuse/waste collections and 10 garden waste collections. Depending on the area within the Gedling district, a specific weekday and schedule name is assigned. Using this search tool, you can find the specific collection information for bin collections.</p>
+<p>Gedling Borough Council has 20 different refuse/waste collections and 10 garden waste collections. Depending on the area within the Gedling district, a specific weekday and schedule name is assigned. Using this search tool, you can find the specific collection information for bin collections.</p>
 
 <p class="fw-bold text-danger">You must enter a street name that is within the Gedling local authority. No additional information such as property numbers or postcode should be entered.</p>
 
