--- a/collections/index.html
+++ b/collections/index.html
@@ -5,26 +5,30 @@ breadcrumb: Collections
 layout: default
 ---
 
-<h2>{{ page.title }}</h2>
+<h1 class="h2">{{ page.title }}</h1>
 
-<p>Find all links to the HTML calendars for refuse/garden bin collections.</p>
+<p>Find all links to the calendars for refuse/garden bin collections in the Gedling local authority. You can also <a href="{{ '/collection-search' | absolute_url }}">search using your street name</a> to find out your specific calendar schedule.</p>
 
 <div class="row row-cols-1 row-cols-sm-2 g-4">
     {% for type in site.data.calendars.bin_collections %}
         <div class="col">
-            <h3 class="mb-3">{{ type.name }}</h3>
+            <h2 class="h3 mb-3">{{ type.name }}</h2>
+
+            <div class="d-flex flex-wrap gap-4">
                 {% for weekday in type.collections %}
+                    <div>
+                        <h3 class="h4">{{ weekday[0] }}</h3>
 
-                    <h4>{{ weekday[0] }}</h4>
-
-                    <ul>
-                        {% for collection in weekday[1] %}
-                            <li>
-                                <a href="{{ collection.permalink | absolute_url }}">{{ collection.name }} Collection Schedule</a>
-                            </li>
-                        {% endfor %}
-                    </ul>
+                        <ol class="list-unstyled">
+                            {% for collection in weekday[1] %}
+                                <li>
+                                    <a href="{{ collection.permalink | absolute_url }}">{{ collection.name }} Collection Calendar</a>
+                                </li>
+                            {% endfor %}
+                        </ol>
+                    </div>
                 {% endfor %}
+            </div>
         </div>
     {% endfor %}
 </div>
