--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@ layout: default
 title: "Waste, Recycling, Glass and Garden bin schedules"
 ---
 
-<h2>Finding your collection schedule</h2>
+<h2>Find your collection day</h2>
 
-<p>Gedling Borough Council provides a <a href="{{ site.gedlingRefuseSearchUrl }}" target="_blank">Refuse Collection Days search tool</a>, which the search below scrapes the data of to provide bin collection details, you can enter any valid street name in the Gedling local authority area and the correct schedules for waste, recycling and garden bin collections will be provided for you.</p>
+<p>Using the street name search below you can enter any valid street name in the Gedling local authority area to find your collection day and schedule for waste, recycling and garden bin collections. This search uses live data from Gedling Borough Council.</p>
 
 {% include find-collection-schedule.html %}
 
-<p class="mt-2">You can also view all calendars below. Each calendar published is provided in HTML, iCalendar (iCal) and JSON formats. All data is derived from <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/tree/main/ical">iCalendar data</a>.</p>
+<p class="mt-2">You can also view all calendars using the buttons below. Each calendar published is provided in HTML, iCalendar (iCal) and JSON. All data is derived from <a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars/tree/main/ical">iCalendar data</a>.</p>
 
-{% include collection-schedules.html %}
+<h2>View all bin calendars</h2>
+
+<p>Gedling Borough Council operate two different types of bin collections, which are explained below:</p>
+
+<dl>
+    <dt>Refuse bin collections</dt>
+    <dd>These collections include waste and recycling, which is Black Bin (general waste) Green Bin (recycling) and Glass Box (glass recycling).</dd>
+  
+    <dt>Garden bin collections</dt>
+    <dd>The garden waste bin is an additional paid service and runs differently to the refuse collections.</dd>
+</dl>
+
+<div class="d-grid gap-2 d-md-block mb-4">
+    <a href="{{ '/collections/refuse' | absolute_url }}" class="btn btn-lg btn-gedling-red">View all refuse bin calendars</a>
+    <a href="{{ '/collections/garden' | absolute_url }}" class="btn btn-lg btn-success">View all garden bin calendars</a>
+</div>
