--- a/404.html
+++ b/404.html
@@ -7,6 +7,19 @@ sitemap: false
 
 <p>Your request did match any pages/resources on this website. Please check the URL and try again.</p>
 
-<p><strong>Please note:</strong> This is not an official Gedling Borough Council website. If you are looking for Gedling Borough Council services, please go to the gedling.gov.uk website for more informaiton.</p>
+<p>Here are some common pages on this website to help get you back to somewhere useful.</p>
 
-<a href="https://www.gedling.gov.uk" class="btn btn-lg btn-gedling-red">Visit gedling.gov.uk</a>
+<ul>
+    <li><a href="{{ '/collection-search' | absolute_url }}">Find your bin collection</a></li>
+    <li><a href="{{ '/collections' | absolute_url }}">All bin collections</a></li>
+    <li><a href="{{ '/collections/refuse' | absolute_url }}">View all refuse collection calendars</a></li>
+    <li><a href="{{ '/collections/garden' | absolute_url }}">View all garden collection calendars</a></li>
+    <li><a href="https://github.com/jamesmacwhite/gedling-borough-council-bin-calendars">View the source/repository</a></li>
+</ul>
+
+<p><strong>Please note:</strong> This is not an official Gedling Borough Council website. If you are looking for Gedling Borough Council services, please go to the gedling.gov.uk website for more information.</p>
+
+<div class="d-grid gap-2 d-md-block mb-4">
+    <a href="{{ site.url }}" class="btn btn-lg btn-dark">Back to the homepage</a>
+    <a href="https://www.gedling.gov.uk" class="btn btn-lg btn-gedling-red">Visit gedling.gov.uk</a>
+</div>
