--- a/json-endpoints.html
+++ b/json-endpoints.html
@@ -45,9 +45,9 @@ layout: default
 <p>The collection item provides the following keys:</p>
 
 <ul>
-    <li><code>name</code> - Original calendar event title</li>
-    <li><code>alternativeName</code> - Modified event title for other uses such as shorter title or other software.</li>
-    <li><code>type</code> - A fixed key value for use in other contexts</li>
+    <li><code>name</code> - Original iCal event title</li>
+    <li><code>alternativeName</code> - Modified event title for other uses such as a shorter title.</li>
+    <li><code>type</code> - A fixed key value for use in other contexts.</li>
     <li><code>collectionDate</code> - The collection date formatted as Y-m-d.</li>
     <li><code>isChangedCollection</code> - A boolean to denote if the collection date is outside of the usual sequence.</li>
 </ul>
