Add SEO description

--- a/json-endpoints.html
+++ b/json-endpoints.html
@@ -1,5 +1,6 @@
 ---
 title: Using bin collection data as JSON
+description: How to use Gedling Borough Council bin collection calendar data in the JSON format.
 layout: default
 ---
 
