Add header image and breakpoint on development environment

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ title: "Waste, Recycling, Glass and Garden bin schedules"
 </dl>
 
 <div class="d-grid gap-2 d-md-block mb-4">
-    <a href="{{ '/collections/refuse' | absolute_url }}" class="btn btn-lg btn-gedling-red">View all refuse bin calendars</a>
+    <a href="{{ '/collections/refuse' | absolute_url }}" class="btn btn-lg btn-gedling-red me-md-2">View all refuse bin calendars</a>
     <a href="{{ '/collections/garden' | absolute_url }}" class="btn btn-lg btn-success">View all garden bin calendars</a>
 </div>
